--- a/playstationApp/composer.json
+++ b/playstationApp/composer.json
@@ -32,5 +32,10 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"require-dev": {
+        "way/generators": "2.*",
+        "fzaninotto/faker": "1.2.*@dev"
+    }
+    
 }
